[package]
name = "wapi"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
name = "wapi"

[dependencies]
sha2 = "0.10.8"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
]